# cjms

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  settings.yaml.example  sqlx-data.json
.cargo/: audit.toml
.config/: nextest.toml
.github/workflows/: docker-image.yml  publish.yml  rust.yml  scheduled-audit.yml
migrations/: 20220224215815_aic_initial_columns.down.sql  20220224215815_aic_initial_columns.sql  20220224215815_aic_initial_columns.up.sql  20220310020913_subscriptions_initial_column.up.sql  20220315185037_subscriptions_initial_columns.sql  20220318223552_aic_archive_initial_columns.sql  20220325215810_subscriptions_add_status_t_column.sql  20220325222545_refunds_initial_columns.sql  20220331004739_refunds_add_correction_file_date_column.sql  20220527205637_subscriptions_add_coupons_column.sql  20221123224826_aic_archive_remove_unique_constraint_for_flow_id.sql
migrations/2022-02-15-210536_create_cj_events/: down.sql  up.sql
src/: appconfig.rs  db.rs  env.rs  handlers.rs  lib.rs  models.rs  schema.rs  settings.rs  telemetry.rs
src/actions/: bigquery.rs  mod.rs  subscription.rs
src/actions/bigquery/: lib.rs  mod.rs  model.rs
src/bigquery/: client.rs
src/controllers/: aic.rs  custodial.rs  mod.rs  subscription.rs
src/lib/: appconfig.rs  check_subscriptions.rs  mod.rs  report_subscriptions.rs  settings.rs  telemetry.rs  version.rs
src/lib/bigquery/: client.rs  mod.rs  model.rs
src/lib/cj/: client.rs  country_codes.rs  mod.rs
src/lib/controllers/: aic.rs  corrections.rs  custodial.rs  mod.rs
src/lib/jobs/: batch_refunds.rs  check_refunds.rs  check_subscriptions.rs  cleanup.rs  mod.rs  report_subscriptions.rs  verify_reports.rs
src/lib/models/: aic.rs  mod.rs  refunds.rs  status_history.rs  subscriptions.rs
src/models/: aic.rs  mod.rs  subscription.rs  subscriptions.rs
tests/: integration_test.rs
tests/fixtures/: bigquery_generic_response.json  bigquery_refunds_response.json  bigquery_response.json  bigquery_subscriptions_response.json  check_refunds_bigquery_response.json  check_subscriptions_aic.json  check_subscriptions_aic_archive.json  check_subscriptions_bigquery_response.json  subscriptions_aic.json
tests/integration/: README.md  aic.rs  appconfig.rs  check_refunds.rs  check_subscriptions.rs  corrections.rs  custodial.rs  heartbeat.rs  main.rs  report_subscriptions.rs  utils.rs
tests/integration/jobs/: batch_refunds.rs  check_refunds.rs  check_subscriptions.rs  cleanup.rs  mod.rs  report_subscriptions.rs  verify_reports.rs
tests/integration/models/: aic.rs  aic_archive.rs  mod.rs  refunds.rs  subscriptions.rs
