[package]
name = "cjms"
edition = "2021"
repository = "https://github.com/mozilla-services/cjms"
# Check git tags for actual version
version = "1.0.0"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "make_version_file"
path = "src/bin/version.rs"

[[bin]]
name = "check_subscription"
path = "src/bin/check_subscription.rs"

[dependencies]
actix-cors = "0.6.0"
actix-web = "4"
chrono = { version = "0.4.19", default-features = false, optional = false }
config = { version = "0.12", default-features = false, features = ["yaml"] }
fake = "2.4.3"
gcp-bigquery-client = "0.11.0"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.11", features = ["offline", "postgres", "runtime-actix-rustls", "time", "uuid"] }
# time must be 0.2 for sqlx support
time = { version = "0.2.27", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# uuid must be 0.8 for sqlx support
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11.0"
serial_test = "0.6.0"
tempfile = "3.3.0"

[profile.dev.package.sqlx-macros]
# improve compile time macro checking
opt-level = 3
