[package]
name = "cjms"
edition = "2021"
repository = "https://github.com/mozilla-services/cjms"
# Check git tags for actual version
version = "1.0.0"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "make_version_file"
path = "src/bin/version.rs"

[[bin]]
name = "check_subscriptions"
path = "src/bin/check_subscriptions.rs"

[[bin]]
name = "report_subscriptions"
path = "src/bin/report_subscriptions.rs"

[[bin]]
name = "check_refunds"
path = "src/bin/check_refunds.rs"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
actix-cors = "0.6.0"
actix-web = "4"
actix-web-httpauth = "0.6.0"
async-trait = "0.1.52"
config = { version = "0.12", default-features = false, features = ["yaml"] }
reqwest = { version = "0.11.9", features = ["json"] }
sentry = "0.25.0"
sentry-actix = "0.25.0"
sentry-tracing = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.11", features = ["offline", "postgres", "runtime-actix-rustls", "time", "uuid", "json"] }
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
# time must be 0.2 for sqlx support
time = { version = "0.2.27", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-actix-web-mozlog = { git = "https://github.com/birdsarah/common-rs", branch = "chrono_to_time" }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# uuid must be 0.8 for sqlx support
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.4.3"
mockall = "0.11.0"
pretty_assertions = "1.2.0"
serial_test = "0.6.0"
tempfile = "3.3.0"
wiremock = "0.5.11"

[profile.dev.package.sqlx-macros]
# improve compile time macro checking
opt-level = 3
